--- a/src/app.html
+++ b/src/app.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Diet & Ride | App Protegido v30</title>
+    <title>Diet & Ride | App Protegido v31</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     
     <script>
-        // CONFIGURAÇÃO UNIVERSAL E PROTEÇÃO
         const API_URL = '/auth';
         const token = localStorage.getItem('token');
         if (!token) window.location.href = 'login.html';
@@ -96,7 +95,6 @@
                 <a href="admin.html" class="flex items-center w-full px-4 py-3 text-xs font-bold text-slate-400 hover:text-blue-600 hover:bg-slate-50 rounded-lg transition-colors gap-2">
                     <i class="fa-solid fa-user-gear"></i> Área Administrativa
                 </a>
-                
                 <button onclick="logout()" class="flex items-center w-full px-4 py-3 mt-1 text-xs font-bold text-red-500 hover:bg-red-50 rounded-lg transition-colors gap-2">
                     <i class="fa-solid fa-right-from-bracket"></i> Sair
                 </button>
@@ -172,7 +170,7 @@
                     <button onclick="setMarketFilter(4)" id="btn-filt-4" class="whitespace-nowrap px-4 py-2 rounded-lg text-xs font-medium text-slate-600 hover:bg-slate-100">Sem 4</button>
                 </div>
                 <div class="text-right w-full md:w-auto">
-                    <p class="text-[10px] uppercase font-bold text-slate-400" id="market-total-label">Estimativa</p>
+                    <p class="text-[10px] uppercase font-bold text-slate-400" id="market-total-label">TOTAL MÊS</p>
                     <p class="text-xl font-bold text-green-600" id="market-total">R$ 0,00</p>
                 </div>
             </div>
@@ -182,7 +180,18 @@
     </main>
 
     <script>
-        // --- DADOS ---
+        function toggleSidebar() { 
+            const sb = document.getElementById('sidebar'); 
+            const ov = document.getElementById('mobile-overlay'); 
+            if(sb.classList.contains('-translate-x-full')) { 
+                sb.classList.remove('-translate-x-full'); 
+                ov.classList.remove('hidden'); 
+            } else { 
+                sb.classList.add('-translate-x-full'); 
+                ov.classList.add('hidden'); 
+            } 
+        }
+
         const defaultData = { 1: { headerTitle: "Bem-vindo", headerSubtitle: "Aguardando dados...", meals: {}, market: [] } };
         let weeksData = {};
         let state = { week: 1, selectedMeal: 'almoco', mode: 'week', marketFilter: 'all', prices: JSON.parse(localStorage.getItem('pricesV23')) || {}, checks: JSON.parse(localStorage.getItem('checksV23')) || {} };
@@ -193,7 +202,6 @@
             'outros': { label: 'Outros', icon: 'fa-box-open', color: 'text-blue-600', bg: 'bg-blue-50' }
         };
 
-        // --- CORE ---
         function init() {
             const stored = localStorage.getItem('dietData');
             weeksData = stored ? JSON.parse(stored) : defaultData;
@@ -201,12 +209,6 @@
             document.getElementById('target-weight').value = localStorage.getItem('dietWeightTarget') || 75;
             updateWeight();
             setMode('week'); nav('diet', 1);
-        }
-
-        function toggleSidebar() {
-            const sb = document.getElementById('sidebar');
-            const ov = document.getElementById('mobile-overlay');
-            if(sb.classList.contains('-translate-x-full')) { sb.classList.remove('-translate-x-full'); ov.classList.remove('hidden'); } else { sb.classList.add('-translate-x-full'); ov.classList.add('hidden'); }
         }
 
         function setMode(m) {
@@ -371,7 +373,8 @@
             });
 
             document.getElementById('market-total').innerText = `R$ ${grandTotal.toFixed(2)}`;
-            document.getElementById('market-total-label').innerText = state.mode === 'week' ? "TOTAL SEMANA" : "TOTAL DIA";
+            // AQUI O FIX: Rótulo Dinâmico
+            document.getElementById('market-total-label').innerText = state.marketFilter === 'all' ? "TOTAL MÊS" : "TOTAL SEMANA";
         }
 
         function updatePrice(id, val) { state.prices[id] = parseFloat(val)||0; localStorage.setItem('pricesV23', JSON.stringify(state.prices)); renderMarket(); }
