--- a/src/admin.html
+++ b/src/admin.html
@@ -78,7 +78,7 @@
 
             <div class="mt-4 pt-4 border-t border-slate-100">
                 <button onclick="exportToApp()" class="flex items-center w-full px-4 py-3 text-sm font-bold text-green-700 bg-green-50 rounded-lg hover:bg-green-100 transition-colors mb-2 border border-green-100 shadow-sm"><i class="fa-solid fa-rocket w-5"></i> Publicar no App</button>
-                <a href="app.html" target="_blank" class="flex items-center w-full px-4 py-3 text-sm font-medium text-blue-600 hover:bg-blue-50 rounded-lg transition-colors"><i class="fa-solid fa-external-link-alt w-5"></i> Ver App Online</a>
+                <a href="app.html" target="_self" class="flex items-center w-full px-4 py-3 text-sm font-medium text-blue-600 hover:bg-blue-50 rounded-lg transition-colors"><i class="fa-solid fa-external-link-alt w-5"></i> Ver App Online</a>
             </div>
 
             <button onclick="logout()" class="flex items-center w-full px-4 py-3 mt-4 text-sm font-bold text-red-500 hover:bg-red-50 rounded-lg transition-colors border border-red-100">
@@ -436,3 +436,4 @@
     </script>
 </body>
 </html>
+
